force-app/main/default/objects/Builder_PO_Timing_Rule__c/Builder_PO_Timing_Rule__c.object-meta.xml
<CustomObject>
    <label>Builder PO Timing Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Builder PO Timing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>