force-app/main/default/objects/Builder_PO_Timing_Rule__c/fields/Builder_Account__c.field-meta.xml
<CustomField>
    <fullName>Builder_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Timing Rules</relationshipLabel>
    <relationshipName>Timing_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>