force-app/main/default/objects/Builder_PO_Timing_Rule__c/fields/Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Business_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Days</label>
    <type>Checkbox</type>
</CustomField>