force-app/main/default/objects/Builder_PO_Timing_Rule__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Timing Rules</relationshipLabel>
    <relationshipName>Timing_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>