force-app/main/default/objects/Builder_PO_Timing_Rule__c/fields/Division_Account__c.field-meta.xml
<CustomField>
    <fullName>Division_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Builder PO Timing Rules (Division Account)</relationshipLabel>
    <relationshipName>Builder_PO_Timing_Rules_Division</relationshipName>
    <type>Lookup</type>
</CustomField>