force-app/main/default/objects/Builder_PO_Timing_Rule__c/fields/Division_Builder_Name__c.field-meta.xml
<CustomField>
    <fullName>Division_Builder_Name__c</fullName>
    <label>Division Builder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>