force-app/main/default/objects/Builder_PO_Timing_Rule__c/fields/Max_Days_Before_Start__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_Before_Start__c</fullName>
    <label>Max Days Before Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>