force-app/main/default/objects/Builder_PO_Timing_Rule__c/fields/Min_Days_Before_Start__c.field-meta.xml
<CustomField>
    <fullName>Min_Days_Before_Start__c</fullName>
    <label>Min Days Before Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>