force-app/main/default/objects/Builder_PO_Timing_Rule__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Builder PO Timing Rules (Parent Account)</relationshipLabel>
    <relationshipName>Builder_PO_Timing_Rules_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>