force-app/main/default/objects/Builder_PO_Timing_Rule__c/fields/Parent_Builder_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Builder_Name__c</fullName>
    <label>Parent Builder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>